--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,14 +65,15 @@ code {
   position: absolute; */
   /* right: 0; */
   min-width: 350px;
-  padding-right: 15px;
+  /* padding-right: 15px; */
   /* max-height: 75vh !important; */
   overflow: overlay;
   height: 90vh;
 }
 .reviews-list-container .card-body{
-  border-radius:5px;
-  background-color:yellowgreen
+  /* border-radius:5px; */
+  /* background-color:yellowgreen */
+ border-bottom: 1px solid rgb(177, 174, 174);
 }
 .reviews-list-container .card-body.highlighted{
   background: wheat;
@@ -105,3 +106,75 @@ code {
       font-weight: bolder;
 }
 /**************/
+
+/*******Star rating Component****************/
+.result {
+  text-align: center;
+  margin-bottom: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.stars {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.star {
+  position: relative;
+  cursor: pointer;
+}
+
+.stars_radio-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+/************************/
+
+/*****Welcome page*******/
+.welcome-page-container{
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /* align-self: center; */
+  height: 90vh;
+  font-size: xxx-large;
+}
+/***********************/
+
+/*Loader*********/
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: grid;
+  place-items: center;
+}
+
+.loader {
+  border: 16px solid #e3e3e3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 140px;
+  height: 140px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/*******/
