handle showing add review button if current user not added before + show edit - delete buttons for the current user

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,6 +86,9 @@ code {
   height: 75vh;
   
 }
+p.card-text{
+margin: 0;
+}
 /***********/
 
 /********Leaflet style*****/
@@ -178,3 +181,4 @@ code {
   }
 }
 /*******/
+
